--- a/Reports/Test-Report-2020.04.23.22.59.45.html
+++ b/Reports/Test-Report-2020.04.23.22.59.45.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Apr 21, 2020 01:05:14 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Apr 23, 2020 10:59:45 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -102,7 +102,7 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>2</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> others
@@ -125,15 +125,15 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>loginTest</span>
-						<span class='test-time'>Apr 21, 2020 01:05:43 PM</span>
+						<span class='test-name'>importExcelFile</span>
+						<span class='test-time'>Apr 23, 2020 11:00:30 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 21, 2020 01:05:43 PM</span>
-	<span class='label end-time'>Apr 21, 2020 01:05:43 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+3ms</span>
+	<span class='label start-time'>Apr 23, 2020 11:00:30 PM</span>
+	<span class='label end-time'>Apr 23, 2020 11:00:30 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+5ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -147,44 +147,9 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:05:43 PM</td>
+				<td class='timestamp'>11:00:30 PM</td>
 				<td class='step-details'>
-						Test Case PASSED IS loginTest
-					
-				</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
-					</div>
-				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
-					<div class='test-heading'>
-						<span class='test-name'>addNewCustomer</span>
-						<span class='test-time'>Apr 21, 2020 01:07:17 PM</span>
-						<span class='test-status right pass'>pass</span>
-					</div>
-					<div class='test-content hide'>
-<div class='test-time-info'>
-	<span class='label start-time'>Apr 21, 2020 01:07:17 PM</span>
-	<span class='label end-time'>Apr 21, 2020 01:07:17 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
-</div>
-<div class='test-steps'>
-	<table class='bordered table-results'>
-		<thead>
-			<tr>
-				<th>Status</th>
-				<th>Timestamp</th>
-				<th>Details</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr class='log' status='pass'>
-				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>1:07:17 PM</td>
-				<td class='step-details'>
-						Test Case PASSED IS addNewCustomer
+						Test Case PASSED IS importExcelFile
 					
 				</td>
 			</tr>
@@ -221,7 +186,7 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Tests
-					<div class='panel-lead'>2</div>
+					<div class='panel-lead'>1</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -233,19 +198,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Apr 21, 2020 01:05:14 PM</div>
+					<div class='panel-lead'>Apr 23, 2020 10:59:45 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Apr 21, 2020 01:07:18 PM</div>
+			 		<div class='panel-lead'>Apr 23, 2020 11:00:30 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 2m 4s+278ms</div>
+					<div class='panel-lead'>0h 0m 45s+68ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -280,8 +245,8 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-                parentCount: 2,
-				passParent: 2,
+                parentCount: 1,
+				passParent: 1,
 				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
@@ -312,7 +277,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "loginTest":0.003,"addNewCustomer":0
+			        "importExcelFile":0.005
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
