--- a/Reports/Test-Report-2020.04.23.23.18.21.html
+++ b/Reports/Test-Report-2020.04.23.23.18.21.html
@@ -44,7 +44,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Apr 20, 2020 05:26:39 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Apr 23, 2020 11:18:21 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -125,15 +125,15 @@
 			<ul id='test-collection' class='test-collection'>
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>SearchVendorEmail</span>
-						<span class='test-time'>Apr 20, 2020 05:27:02 PM</span>
+						<span class='test-name'>importExcelFile</span>
+						<span class='test-time'>Apr 23, 2020 11:19:08 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Apr 20, 2020 05:27:02 PM</span>
-	<span class='label end-time'>Apr 20, 2020 05:27:02 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
+	<span class='label start-time'>Apr 23, 2020 11:19:08 PM</span>
+	<span class='label end-time'>Apr 23, 2020 11:19:08 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+2ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -147,9 +147,9 @@
 		<tbody>
 			<tr class='log' status='pass'>
 				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-				<td class='timestamp'>5:27:02 PM</td>
+				<td class='timestamp'>11:19:08 PM</td>
 				<td class='step-details'>
-						Test Case PASSED IS SearchVendorEmail
+						Test Case PASSED IS importExcelFile
 					
 				</td>
 			</tr>
@@ -198,19 +198,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Apr 20, 2020 05:26:39 PM</div>
+					<div class='panel-lead'>Apr 23, 2020 11:18:21 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Apr 20, 2020 05:27:03 PM</div>
+			 		<div class='panel-lead'>Apr 23, 2020 11:19:08 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 24s+79ms</div>
+					<div class='panel-lead'>0h 0m 46s+742ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -277,7 +277,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "SearchVendorEmail":0
+			        "importExcelFile":0.002
 			};
 		</script>
 		<script src='https://cdn.rawgit.com/extent-framework/extent-github-cdn/b65cd69/v3html/js/extent.js' type='text/javascript'></script>
