--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="77a679">  <td>20/04/20 17:45:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchVendorEmailByVendorRole_008.SearchVendorEmail()[pri:0, instance:com.nopcommerce.testCases.SearchVendorEmailByVendorRole_008@4e50c791]">SearchVendorEmail</td> 
-  <td>main@2082351774</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/04/23 18:10:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExportExcelFileOfNewCustomer_007.ExportExcelFile()[pri:1, instance:com.nopcommerce.testCases.ExportExcelFileOfNewCustomer_007@4e50c791]">ExportExcelFile</td> 
+  <td>main@896644936</td>   <td></td> </tr>
+<tr bgcolor="77a679">  <td>20/04/23 18:10:39</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExportExcelFileOfNewCustomer_007.verifyingExistingEmail()[pri:0, instance:com.nopcommerce.testCases.ExportExcelFileOfNewCustomer_007@4e50c791]">verifyingExistingEmail</td> 
+  <td>main@896644936</td>   <td></td> </tr>
 </table>
