--- a/test-output/old/NopCommerce Suite/methods-alphabetical.html
+++ b/test-output/old/NopCommerce Suite/methods-alphabetical.html
@@ -1,10 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>nopCommerce Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="659282">  <td>20/04/20 17:55:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchVendorEmailByVendorRole_008.SearchVendorEmail()[pri:0, instance:com.nopcommerce.testCases.SearchVendorEmailByVendorRole_008@71e9ddb4]">SearchVendorEmail</td> 
-  <td>main@671471369</td>   <td></td> </tr>
-<tr bgcolor="d68fa3">  <td>20/04/20 17:55:37</td>   <td>-13560</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.SearchVendorEmailByVendorRole_008@71e9ddb4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@671471369</td>   <td></td> </tr>
-<tr bgcolor="d68fa3">  <td>20/04/20 17:56:00</td>   <td>9382</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.SearchVendorEmailByVendorRole_008@71e9ddb4]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@671471369</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>20/04/24 00:54:28</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExportExcelFileOfNewCustomer_007.ExportExcelFile()[pri:0, instance:com.nopcommerce.testCases.ExportExcelFileOfNewCustomer_007@e4487af]">ExportExcelFile</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aed9f0">  <td>20/04/24 00:55:33</td>   <td>64506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchVendorEmailByVendorRole_008.SearchVendorEmail()[pri:0, instance:com.nopcommerce.testCases.SearchVendorEmailByVendorRole_008@6aaceffd]">SearchVendorEmail</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="fdc0b0">  <td>20/04/24 00:53:00</td>   <td>-88450</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@49e5f737]">addNewCustomer</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="9bd5b0">  <td>20/04/24 00:52:28</td>   <td>-119917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DeleteNewAddedCustomer_006.deleteNewCustomer()[pri:0, instance:com.nopcommerce.testCases.DeleteNewAddedCustomer_006@687e99d8]">deleteNewCustomer</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="af787b">  <td>20/04/24 00:55:54</td>   <td>86157</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ImportExcelFile_009.importExcelFile()[pri:0, instance:com.nopcommerce.testCases.ImportExcelFile_009@c86b9e3]">importExcelFile</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="d86b78">  <td>20/04/24 00:52:07</td>   <td>-140739</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@445b295b]">loginTest</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>20/04/24 00:55:09</td>   <td>40718</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCustomerByEmail_004.searchCustomerByEmailTest()[pri:0, instance:com.nopcommerce.testCases.SearchCustomerByEmail_004@5c671d7f]">searchCustomerByEmailTest</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="9a8684">  <td>20/04/24 00:56:37</td>   <td>128520</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchCustomerByName_005.searchCustomerByName()[pri:1, instance:com.nopcommerce.testCases.SearchCustomerByName_005@757277dc]">searchCustomerByName</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:51:53</td>   <td>-154801</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@445b295b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:52:18</td>   <td>-129706</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.DeleteNewAddedCustomer_006@687e99d8]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:52:50</td>   <td>-98340</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@49e5f737]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:54:18</td>   <td>-9969</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.ExportExcelFileOfNewCustomer_007@e4487af]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:54:59</td>   <td>30877</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.SearchCustomerByEmail_004@5c671d7f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:55:23</td>   <td>54441</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.SearchVendorEmailByVendorRole_008@6aaceffd]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:55:44</td>   <td>76190</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.ImportExcelFile_009@c86b9e3]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:56:27</td>   <td>118556</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.SearchCustomerByName_005@757277dc]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:52:14</td>   <td>-134099</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@445b295b]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:52:49</td>   <td>-98757</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.DeleteNewAddedCustomer_006@687e99d8]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:54:18</td>   <td>-10520</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@49e5f737]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:54:59</td>   <td>30705</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.ExportExcelFileOfNewCustomer_007@e4487af]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:55:22</td>   <td>54310</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.SearchCustomerByEmail_004@5c671d7f]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:55:44</td>   <td>76010</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.SearchVendorEmailByVendorRole_008@6aaceffd]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:56:26</td>   <td>118330</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.ImportExcelFile_009@c86b9e3]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="aba872">  <td>20/04/24 00:56:51</td>   <td>142616</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.SearchCustomerByName_005@757277dc]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>20/04/24 00:54:47</td>   <td>18793</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExportExcelFileOfNewCustomer_007.verifyingExistingEmail()[pri:0, instance:com.nopcommerce.testCases.ExportExcelFileOfNewCustomer_007@e4487af]">verifyingExistingEmail</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
+<tr bgcolor="7161c7">  <td>20/04/24 00:54:52</td>   <td>23700</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ExportExcelFileOfNewCustomer_007.verifyingExistingFile()[pri:0, instance:com.nopcommerce.testCases.ExportExcelFileOfNewCustomer_007@e4487af]">verifyingExistingFile</td> 
+  <td>main@1704237553</td>   <td></td> </tr>
 </table>
