--- a/test-output/old/NopCommerce Suite/methods.html
+++ b/test-output/old/NopCommerce Suite/methods.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>nopCommerce Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af90ec">  <td>20/04/25 11:02:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@1f59a598]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
-<tr bgcolor="9bd5b0">  <td>20/04/25 11:02:41</td>   <td>10024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginTest_001.loginTest()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@1f59a598]">loginTest</td> 
-  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/04/25 11:02:46</td>   <td>15851</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_LoginTest_001@1f59a598]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/04/25 11:02:51</td>   <td>20307</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDataDrivenFromDataBase_011@1e178745]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>20/04/25 11:02:57</td>   <td>26705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDataDrivenFromDataBase_011.verifyingLoginData(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDataDrivenFromDataBase_011@1e178745]">verifyingLoginData</td> 
-  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>20/04/25 11:03:09</td>   <td>38037</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDataDrivenFromDataBase_011.verifyingLoginData(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDataDrivenFromDataBase_011@1e178745]">verifyingLoginData</td> 
-  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>20/04/25 11:03:45</td>   <td>74852</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDataDrivenFromDataBase_011.verifyingLoginData(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDataDrivenFromDataBase_011@1e178745]">verifyingLoginData</td> 
-  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
-<tr bgcolor="7161c7">  <td>20/04/25 11:04:22</td>   <td>111001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_LoginDataDrivenFromDataBase_011.verifyingLoginData(java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.nopcommerce.testCases.TC_LoginDataDrivenFromDataBase_011@1e178745]">verifyingLoginData</td> 
-  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
-<tr bgcolor="af90ec">  <td>20/04/25 11:04:58</td>   <td>147139</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.TC_LoginDataDrivenFromDataBase_011@1e178745]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@446573116</td>   <td></td> </tr>
+<tr bgcolor="72b167">  <td>20/11/11 14:15:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TestBaseClass.setUp(java.lang.String)[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@2f40a43]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@133565809</td>   <td></td> </tr>
+<tr bgcolor="adc16e">  <td>20/11/11 14:15:06</td>   <td>5953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddCustomerTest_003.addNewCustomer()[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@2f40a43]">addNewCustomer</td> 
+  <td>TestNG-tests-1@133565809</td>   <td></td> </tr>
+<tr bgcolor="72b167">  <td>20/11/11 14:16:35</td>   <td>95048</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBaseClass.tearDown()[pri:0, instance:com.nopcommerce.testCases.AddCustomerTest_003@2f40a43]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@133565809</td>   <td></td> </tr>
 </table>
